Fine tune FX TARF score and update document to implement in BCT
